@@ -1,5 +1,7 @@
 [Changes 1.2c01]
 
+* Add sanity checking of incoming nicknames. (caf)
+
 * /MV (massvoice) shouldn't send +v for already-voiced users. (caf)
 
 * Fix lag check on recent 32 bit OpenBSD / NetBSD (reported by DJ). (caf)
